[package]
name = "tranquility-http-signatures"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
base64 = "0.13.0"
http = "0.2.8"
pem = "1.0.2"
pkcs8 = { version = "0.8.0", features = ["alloc"] }
ring = { version = "0.16.20", features = ["std"] }
thiserror = "1.0.31"

[dependencies.reqwest]
version = "0.11.10"
default-features = false
optional = true

[features]
default = []
