[package]
name = "tranquility-ratelimit"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
axum = { version = "0.5.15", default-features = false }
futures-util = "0.3.21"
governor = "0.4.2"
thiserror = "1.0.34"
tower-layer = "0.3.1"
tower-service = "0.3.2"
tracing = "0.1.36"

[features]
