[package]
name = "tranquility-ratelimit"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
axum = { version = "0.5.16", default-features = false }
futures-util = "0.3.24"
governor = "0.5.0"
thiserror = "1.0.37"
tower-layer = "0.3.1"
tower-service = "0.3.2"
tracing = "0.1.36"

[features]
