[package]
name = "tranquility-ratelimit"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
axum = { version = "0.5.17", default-features = false }
futures-util = "0.3.25"
governor = "0.5.0"
thiserror = "1.0.37"
tower-layer = "0.3.2"
tower-service = "0.3.2"
tracing = "0.1.37"

[features]
