[package]
name = "tranquility-types"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.83"
time = { version = "0.3.13", optional = true, features = ["serde", "serde-well-known"] }

[features]
activitypub = ["time"]
mastodon = ["time"]
nodeinfo = [ ]
webfinger = [ ]
