[package]
name = "tranquility-types"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
time = { version = "0.3.15", optional = true, features = ["serde", "serde-well-known"] }

[features]
activitypub = ["time"]
mastodon = ["time"]
nodeinfo = [ ]
webfinger = [ ]
