[package]
name = "tranquility"
version = "0.1.0"
edition = "2021"
license = "MIT"
build = "build.rs"

[dependencies]
ammonia = "3.2.0"
argh = "0.1.7"
askama = "0.11.1"
async-trait = "0.1.53"
axum = "0.5.4"
axum-macros = "0.2.0"
axum-server = { version = "0.4.0", features = ["tls-rustls"] }
base64 = "0.13.0"
cfg-if = "1.0.0"
futures-util = "0.3.21"
headers = "0.3.7"
hex = "0.4.3"
http = "0.2.7"
hyper = "0.14.18"
itertools = "0.10.3"
once_cell = "1.10.0"
ormx = { version = "0.10.0", features = ["postgres"] }
paste = "1.0.7"
rand = "0.8.5"
rayon = "1.5.2"
regex = "1.5.5"
reqwest = { version = "0.11.10", default-features = false, features = ["json", "rustls-tls"] }
rsa = "0.6.1"
rust-argon2 = "1.0.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
serde_qs = "0.9.2"
sha2 = "0.10.2"

# Needs to be v0.5.12 for the crates.io patch to work
sqlx = { version = "0.5.12", features = ["json", "offline", "postgres", "runtime-tokio-rustls", "time", "uuid"] } 

thiserror = "1.0.30"
time = { version = "0.3.9", features = ["formatting"] }
tokio = { version = "1.18.0", features = ["full", "tracing"] }
toml = "0.5.9"
tower = "0.4.12"
tower-http = { version = "0.3.2", features = ["auth", "compression-full", "cors", "trace"] }
tracing = { version = "0.1.34", features = ["attributes"] }
tracing-subscriber = { version = "0.3.11", features = ["env-filter", "parking_lot"] }
url = "2.2.2"
uuid = { version = "1.0.0", features = ["serde", "v4"] }
validator = { version = "0.14.0", features = ["derive"] }

# Email functionality (optional)
lettre = { version = "0.10.0-rc.6", default-features = false, features = ["builder", "hostname", "smtp-transport", "tokio1-rustls-tls", "tracing"], optional = true }

# Jaeger/OpenTelemetry (optional)
opentelemetry = { version = "0.17.0", features = ["rt-tokio"], optional = true }
opentelemetry-jaeger = { version = "0.16.0", features = ["rt-tokio"], optional = true }
tracing-opentelemetry = { version = "0.17.2", optional = true }

# Markdown posts (optional)
pulldown-cmark = { version = "0.9.1", default-features = false, optional = true }

# Memory allocators (optional)
jemalloc = { package = "jemallocator", version = "0.3.2", optional = true }
mimalloc = { version = "0.1.29", optional = true }

[dependencies.tranquility-http-signatures]
path = "../tranquility-http-signatures"
features = ["reqwest"]

[dependencies.tranquility-ratelimit]
path = "../tranquility-ratelimit"

[dependencies.tranquility-types]
path = "../tranquility-types"
features = ["activitypub", "nodeinfo", "webfinger"]

[features]
default = ["mastodon-api"]

email = ["lettre"]
jaeger = ["opentelemetry", "opentelemetry-jaeger", "tracing-opentelemetry"]
markdown = ["pulldown-cmark"]
mastodon-api = ["tranquility-types/mastodon"]

[dev-dependencies]
jsonschema = { version = "0.16.0", default-features = false }
