[package]
name = "tranquility"
version = "0.1.0"
edition = "2021"
license = "MIT"
build = "build.rs"

[dependencies]
ammonia = "3.2.0"
argh = "0.1.7"
askama = "0.11.1"
async-trait = "0.1.56"
axum = "0.5.7"
axum-macros = "0.2.2"
axum-server = { version = "0.4.0", features = ["tls-rustls"] }
base64 = "0.13.0"
cfg-if = "1.0.0"
futures-util = "0.3.21"
headers = "0.3.7"
hex = "0.4.3"
http = "0.2.8"
itertools = "0.10.3"
mime = "0.3.16"
once_cell = "1.12.0"
ormx = { version = "0.10.0", features = ["postgres"] }
paste = "1.0.7"
rand = "0.8.5"
rayon = "1.5.3"
regex = "1.5.6"
reqwest = { version = "0.11.11", default-features = false, features = ["json", "rustls-tls"] }
rsa = "0.6.1"
rust-argon2 = "1.0.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
serde_qs = "0.9.2"
sha2 = "0.10.2"
sqlx = { version = "0.5.12", features = ["json", "offline", "postgres", "runtime-tokio-rustls", "time", "uuid"] } # Needs to be v0.5.12 for the crates.io patch to work
thiserror = "1.0.31"
time = { version = "0.3.9", features = ["formatting"] }
tokio = { version = "1.19.2", features = ["full", "tracing"] }
toml = "0.5.9"
tower = "0.4.12"
tower-http = { version = "0.3.4", features = ["compression-full", "cors", "trace"] }
tracing = { version = "0.1.35", features = ["attributes"] }
tracing-subscriber = { version = "0.3.11", features = ["env-filter", "parking_lot"] }
url = "2.2.2"
uuid = { version = "1.1.2", features = ["serde", "v4"] }
validator = { version = "0.15.0", features = ["derive"] }

# Email functionality (optional)
lettre = { version = "0.10.0-rc.7", default-features = false, features = ["builder", "hostname", "smtp-transport", "tokio1-rustls-tls", "tracing"], optional = true }

# Jaeger/OpenTelemetry (optional)
opentelemetry = { version = "0.17.0", features = ["rt-tokio"], optional = true }
opentelemetry-jaeger = { version = "0.16.0", features = ["rt-tokio"], optional = true }
tracing-opentelemetry = { version = "0.17.3", optional = true }

# Markdown posts (optional)
pulldown-cmark = { version = "0.9.1", default-features = false, optional = true }

# Memory allocators (optional)
jemalloc = { package = "jemallocator", version = "0.3.2", optional = true }
mimalloc = { version = "0.1.29", optional = true }

[dependencies.tranquility-content-length-limit]
path = "../tranquility-content-length-limit"

[dependencies.tranquility-http-signatures]
path = "../tranquility-http-signatures"
features = ["reqwest"]

[dependencies.tranquility-ratelimit]
path = "../tranquility-ratelimit"

[dependencies.tranquility-types]
path = "../tranquility-types"
features = ["activitypub", "nodeinfo", "webfinger"]

[features]
default = ["mastodon-api"]

email = ["lettre"]
jaeger = ["opentelemetry", "opentelemetry-jaeger", "tracing-opentelemetry"]
markdown = ["pulldown-cmark"]
mastodon-api = ["tranquility-types/mastodon"]

[dev-dependencies]
jsonschema = { version = "0.16.0", default-features = false }
